# RPi-Pico-USB-Serial-CLI-Rust

./: .dir-locals.el  .gitignore  Cargo.toml  Embed.toml  README.md  bacon.toml  build.rs  memory.x  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
src/: adcs.rs  config.rs  core1.rs  defmt_bypass.rs  delay.rs  device.rs  fifo_buffer.rs  gpios.rs  log.rs  macros.rs  main.rs  main_core1.rs  pin_config.rs  prelude.rs  program.rs  pwms.rs  serial_io.rs  state.rs  tasklet.rs
src/cli/: commands.rs  error.rs  mod.rs  parser.rs
src/cli/commands/: base.rs  examples.rs
src/drivers/: dht22.rs
src/simple_cli/: cli_commands.rs  commands.rs  error.rs  errors.rs  mod.rs  parser.rs  process.rs  program.rs
src/simple_cli/commands/: base.rs  core.rs  examples.rs
src/system/: adcs.rs  config.rs  delay.rs  device.rs  gpios.rs  mod.rs  pwms.rs  serial_io.rs
src/utils/: fifo_buffer.rs  log.rs  mod.rs  tasklet.rs
