[package]
edition = "2024"
name    = "rust_rp2040_cli"
version = "0.1.0"
license = "MIT OR Apache-2.0"


[dependencies]
cortex-m     = "0.7.7"
cortex-m-rt  = "0.7.5"
embedded-hal = "1.0.0"
rp-pico      = "0.9.0"

# defmt       = "1.0.1"
# defmt-rtt   = "1.0.0"
# panic-probe = { version = "1.0.0", features = ["print-defmt"] }
# panic-halt            = "*"
# panic-probe = { version = "1.0.0" }
rp2040-panic-usb-boot = "0.6.0"
rp2040-rom            = "0.1.0"
usb-device            = "0.3.2"
usbd-serial           = "0.2.2"
nb                    = "1.1.0"
heapless              = "0.9.1"



# If you're not going to use a Board Support Package you'll need these:
# rp2040-hal = { version="0.10", features=["rt", "critical-section-impl"] }
# rp2040-boot2 = "0.3"


[lints.rust]
dead_code        = "allow"
unused_variables = "allow"


# cargo build/run
[profile.dev]
codegen-units    = 1
debug            = 2
debug-assertions = true
incremental      = false
opt-level        = 3
overflow-checks  = true

# cargo build/run --release
[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 3
overflow-checks  = false



# # cargo test
# [profile.test]
# codegen-units    = 1
# debug            = 2
# debug-assertions = true
# incremental      = false
# opt-level        = 3
# overflow-checks  = true

# # cargo test --release
# [profile.bench]
# codegen-units    = 1
# debug            = 2
# debug-assertions = false
# incremental      = false
# lto              = 'fat'
# opt-level        = 3
