[package]
edition = "2024"
name    = "rust_rp2040_cli"
version = "0.1.0"
license = "MIT OR Apache-2.0"


[dependencies]
cortex-m     = "0.7.7"
cortex-m-rt  = "0.7.5"
rp2040-hal   = { version = "0.11.0", features = ["rt", "critical-section-impl", "rom-func-cache", "rom-v2-intrinsics"] }
rp2040-boot2 = "0.3.0"

embedded-hal     = "1.0.0"
embedded_hal_0_2 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
critical-section = "1.2.0"

usb-device  = "0.3.2"
usbd-serial = "0.2.2"
nb          = "1.1.0"
heapless    = "0.9.1"
pastey      = "0.1.1"
duplicate   = "2.0.0"


# Optional Dependencies
defmt     = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.0.0", optional = true }

panic-persist         = { version = "0.3.0", optional = true }
panic-probe           = { version = "1.0.0", optional = true, features = ["print-defmt"] }
rp2040-panic-usb-boot = { version = "0.6.0", optional = true }


[features]
default = ["panic-persist"]
dev     = ["defmt"]

# Custom panic and logging strategies
# E.g. cargo build --no-default-features --features "defmt"
panic-usb     = ["dep:rp2040-panic-usb-boot"]
panic-persist = ["dep:panic-persist"]
defmt         = ["dep:defmt", "dep:defmt-rtt", "dep:panic-probe", "rp2040-hal/defmt"]


# cargo build/run
[profile.dev]
codegen-units    = 1
debug            = true
debug-assertions = true
incremental      = false
opt-level        = "z"
overflow-checks  = true

# cargo build/run --release
[profile.release]
codegen-units    = 1
debug            = true  # no overhead for bare-metal
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = "s"
overflow-checks  = false


[lints.rust]
dead_code        = "allow"
unused_variables = "allow"
